--- a/config.toml
+++ b/config.toml
@@ -112,6 +112,9 @@ menu_more = "show more"
 # Displayed after teaser text for a blog post.
 read_more = "read more"
 
+# Displayed before input group for copying to clipboard the present URL
+url_to_clipboard = "Copy this page URL to your clipboard"
+
 # not currently used from previous theme, but leaving here for now in case I
 # feel like adding it.
 read_other_posts = "read other posts"
