--- a/config.toml
+++ b/config.toml
@@ -160,3 +160,7 @@ ddg_text_size = "l"
 
 # Dark/Light mode switcher
 theme_switcher = true
+
+# Twitter support
+twitter_site="@username" # for the website used in the card footer
+twitter_user="@username" # for the content creator/author (you can overwrite it on page metadata)
