--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ highlight_theme = "axar" # Other dark themes that work: "1337", "agola-dark",
                          # "visual-studio-dark"
 
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = false
+build_search_index = true
 
 # Built in taxonomies of zerm. 
 taxonomies = [
