--- a/config.toml
+++ b/config.toml
@@ -185,3 +185,8 @@ twitter_user="@username" # for the content creator/author (you can overwrite it 
 
 # Options for disqus
 disqus = { enabled=false, short_name="" }
+
+# generate Table of Contents for all articles
+# Table of Contents can be generated for individual articles
+# by adding `ToC = true` in [extra] section in frontmatter
+# ToC = true
